styles/projects.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=WindSong:wght@400;500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');

* {
    margin: 0;
    box-sizing: border-box;
    font-family: 'Times New Roman', Times, serif;
    color: black;
}

#page-wrapper {
    width: 80vw;
    margin: 0 auto;
    min-height: 100vh;
}

/* STARTS: Header */
header {
    display: flex;
    flex-direction: column;
    background-color: #7895b5;
    padding: 1vh 2vw;
    border-bottom: 1px dashed black;
}

header h1 {
    font-family: "WindSong", serif;
    color: white;
}

header p {
    font-style: italic;
    color: white;
}

/* ENDS: Header */


/* STARTS: Navbar */
nav {
    width: 30%;
    border-right: 1px dashed black;
}

nav ul {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    background-color: #88a2be;
    text-align: center;
    list-style: none;
    padding-left: 0;
}

nav li {
    font-size: calc(3px + 2vw);
    width: 60%;
    background-color: #b9c9d9;
    border-radius: 15%;
    padding: 1vh 0;
    margin: 4vh auto;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 5px 8px;
}


nav a {
    font-family: "Delius", serif;
    text-decoration: none;
    color: white;
}

nav a:hover {
    font-style: italic;
}

nav li:hover {
    background-color: #7895b5;
    transition: 0.2s ease;
}

/* ENDS: Navbar */


/* STARTS: Main */
main {
    display: flex;
    flex-direction: column;
    width: 70%;
    background-color: #dae3eb;
    min-height: 100vh;
}


main p {
    margin: 2vh 2vw;
    font-size: calc(2px + 2vw);
    color: black;
}

img {
    max-width: 100%;
    border-radius: 15%;
}

.picture {
    width: 45%;
    margin: 0 auto;
    padding: 1vh 1vw;
}

#cat-gif {
    width: 35%;
    margin: 0 auto;
}

.name {
    font-family: "WindSong", serif;
    color: black;
}

#page-title {
    font-style: italic;
    font-family: "Delius", serif;
    margin: 2vw 0;
    text-align: center;
    font-size: calc(2px + 2vw);
    color: black;
}

#page-title:hover {
    text-decoration: underline;
    transition: 0.5s ease;
}

.proj-name {
    font-size: calc(2px + 2.5vw);
    font-family: "Delius", serif;
    color: black;
    text-align: center;
}

.tech {
    font-size: calc(2px + 2vw);
    font-family: "Delius", serif;
    color: black;
    text-align: center;
}

.proj-link {
    font-size: calc(2px + 2vw);
    font-family: "Delius", serif;
    color: black;
    text-align: center;
    border: 1px solid black;
    width: 40%;
    margin: 1vh auto;
    padding: 1vh 0;
    text-decoration: none;
}

.proj-link:hover {
    background-color: #88a2be;
    text-decoration: underline;
}

.content {
    border-bottom: 1px dashed black;
}

#calc {
    background-image: url("https://media3.giphy.com/media/MyWrJJIdAfoJuEPlLP/200w.gif?cid=6c09b9522770ik2eoh4i6i597cgfcao2umys7xg1rtkdh1kq&ep=v1_gifs_search&rid=200w.gif&ct=g");
    background-repeat: no-repeat;
    background-size: cover;
    border: 2px solid #7895b5;
    border-radius: 15%;
    padding: 2vh 2vw;
    width: 50%;
    margin: 4vh auto;
    text-align: center;
}

.boxes {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 1vh;
}

.calc-label {
    font-size: calc(1vh + 1vw);
    font-weight: bold;
    color: black;
}

#calc-buttons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1vh;
}
/* ENDS: Main */


/* WRAPPER: Navbar and Main */
#content-wrapper {
    width: 100%;
    display: flex;
    flex-direction: row;
    position: relative;
    background-color: #88a2be;
}

/* (END) WRAPPER: Navbar and Main */

/* START: Footer */
footer {
    background-color: #7895b5;
    padding: 1vh 1vw;
    display: flex;
    justify-content: space-evenly;
    border-top: 1px dashed black;
}

footer a:hover {
    color: black;
}

/* END: Footer */

@media screen and (max-width: 750px) {
    header {
        align-items: center;
        flex-direction: column;
    }

    #content-wrapper {
        width: 100%;
        flex-direction: column;
    }

    nav {
        width: 100%;
        border-bottom: 1px dashed black;
    }

    nav ul {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        background-color: #88a2be;
        list-style: none;
        padding-left: 0;
    }

    nav li {
        font-size: calc(2px + 1.5vw);
        background-color: #b9c9d9;
        padding: 1% .5%;
        margin: 1% .5%;
    }

    nav a {
        font-family: "Delius", serif;
        text-decoration: none;
    }

    main {
        display: flex;
        flex-direction: column;
        width: 100%;
        background-color: #dae3eb;
    }

    main p {
        margin: 2% 2%;
        font-size: calc(2px + 3vw);
    }

    #profile-image {
        max-width: 100%;
    }

    .content {
        align-self: center;
        width: 100%;
        margin: 1vh 1vw;
        border-bottom: 1px dashed black;
    }

    .picture {
        width: 35%;
        margin: 0 auto;
        padding: 1vh 1vw;
    }

    #page-title {
        font-style: italic;
        text-align: center;
        color: black;
    }

    #page-title:hover {
        text-decoration: underline;
        transition: 0.5s ease;
    }
}

